stylistic fixes in api object collector test